--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
             </ul>
         </section>
         <section class="grid-photo">
-            <img src="./images/grid__item-1.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-2.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-3.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-4.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-5.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-6.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-7.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-8.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-9.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-10.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-11.jpg" alt="" class="grid-photo__item">
-            <img src="./images/grid__item-12.jpg" alt="" class="grid-photo__item">
+            <img src="./images/grid__item-1.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-2.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-3.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-4.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-5.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-6.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-7.jpg" alt="Берег моря" class="grid-photo__item">
+            <img src="./images/grid__item-8.jpg" alt="Машина на льду" class="grid-photo__item">
+            <img src="./images/grid__item-9.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-10.jpg" alt="Раннее поле" class="grid-photo__item">
+            <img src="./images/grid__item-11.jpg" alt="Снежные горы" class="grid-photo__item">
+            <img src="./images/grid__item-12.jpg" alt="Вид из окна" class="grid-photo__item">
         </section>
         <section class="places">
             <div class="places__card">
