--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="./images/grid__item-3.jpg" alt="Горы" class="grid-photo__item">
             <img src="./images/grid__item-4.jpg" alt="Горы" class="grid-photo__item">
             <img src="./images/grid__item-5.jpg" alt="Горы" class="grid-photo__item">
-            <img src="./images/grid__item-6.jpg" alt="Горы" class="grid-photo__item">
+            <img src="./images/grid__item-6.jpg" alt="Знак перед снежным полем" class="grid-photo__item">
             <img src="./images/grid__item-7.jpg" alt="Берег моря" class="grid-photo__item">
             <img src="./images/grid__item-8.jpg" alt="Машина на льду" class="grid-photo__item">
             <img src="./images/grid__item-9.jpg" alt="Горы" class="grid-photo__item">
