--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Russian travel</title>
@@ -10,8 +10,8 @@
     <header class="header">
         <img src="./images/logo.svg" alt="Лого Россия" class="header__logo">
         <div class="header__lang-container">
-            <p class="header__lang-link">Ru</p>
-            <p class="header__lang-link">En</p>
+            <a class="header__lang-link header__lang-link_status_active">Ru</a>
+            <a class="header__lang-link">En</a>
         </div>
     </header>
     <main class="main">
@@ -22,18 +22,18 @@
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-            <div class="intro__title">Чего мы там не видели?</div>
+            <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
                 но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно  без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу»
                 и проехала 20 тысяч километров
                 по родной стране. Мы выбрали
                 и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
-                <li class="intro__list-item">Часовых поясов 11</li>
-                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-                <li class="intro__list-item">Природных заповедников 105</li>
-                <li class="intro__list-item">Природных заповедников 105 Аэропортов 241</li>
+                <li class="intro__list-item">Часовых поясов <span class="intro__span-accent">11</span></li>
+                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+                <li class="intro__list-item">Природных заповедников <span class="intro__span-accent">105</span></li>
+                <li class="intro__list-item">Аэропортов <span class="intro__span-accent">241</span></li>
             </ul>
         </section>
         <section class="grid-photo">
@@ -120,7 +120,7 @@
             </div>
         </section>
         <section class="cover">
-            <a href="#" class="cover__link" target="_blank">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                 <h2 class="cover__title">До Байкала
                     «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы
@@ -130,13 +130,13 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__links">
+        <nav class="footer__links">
             <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
             <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
             <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
             <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
             <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
-        </div>
+        </nav>
         <p class="footer__copyright">© 2020. Ярослав З</p>
     </footer>
 <!--git config --global --add safe.directory 'F:/ПРОЭКТЫ ЯНДЕКС ПРАКТИКУМ/russian-travel'-->
